--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "apexcharts": "^4.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.474.0",
     "next": "^14.2.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.9.0",
+    "react-datepicker": "^9.0.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
